# aicup

./: .gitignore  AlarmingMinisters.cpp  AlarmingMinisters.h  CMakeLists.txt  DefaultDistributor.cpp  DefaultDistributor.h  DefaultExploringMinister.cpp  DefaultExploringMinister.h  DefaultMinistries.cpp  DefaultMinistries.h  DrawerHolder.cpp  DrawerHolder.h  Interfaces.cpp  Interfaces.h  MainFactory.cpp  MainFactory.h  MyStrategy.cpp  MyStrategy.hpp  StartGameMinisters.cpp  StartGameMinisters.h  StartGameMinisters2.cpp  StartGameMinisters2.h  StartGameMinisters3.cpp  StartGameMinisters3.h  main.cpp
